<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_refresh"
        android:title=""
        android:checkable="false"
        android:orderInCategory="1"
        android:showAsAction="always"/>
    <item android:id="@+id/menu_scan"
        android:title="@string/menu_scan"
        android:orderInCategory="100"
        android:showAsAction="always|withText"/>
    <item android:id="@+id/menu_stop"
        android:title="@string/menu_stop"
        android:orderInCategory="101"
        android:showAsAction="always|withText"/>
    <item android:id="@+id/menu_devices"
        android:title="@string/menu_devices"
        android:orderInCategory="102"
        android:enabled="false"
        android:showAsAction="never"/>
    <item android:id="@+id/menu_visitors"
        android:title="@string/menu_visitors"
        android:orderInCategory="103"
        android:showAsAction="never"/>
</menu>
