<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false" >

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_rssi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/signal_strength"
            android:src="@drawable/signal_indicator_1" />

        <TextView
            android:id="@+id/device_rssi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/signal_strength_placeholder"
            android:textColor="@color/gwt_green_color"
            android:textSize="12dp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bluetooth Device"
            android:textAllCaps="false"
            android:textColor="@color/gray_device_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/device_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:1C:2B:31:34:21"
            android:textAllCaps="true"
            android:visibility="visible" />

        <TextView
            android:id="@+id/device_bonded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonded_state"
            android:textAllCaps="true"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>
